# audiopapers

./: .gitignore  LICENSE  README.md  audiopapers.config.example.json  make_audiobook.py  pyproject.toml
audiopapers/: __init__.py  audio.py  chapters.py  cleaning.py  cli.py  config.py  packaging.py  segments.py  tts.py
audiopapers/adapters/: __init__.py  epub.py  markdown.py  plaintext.py  url.py
tests/: conftest.py  test_audio.py  test_chapters.py  test_cleaning.py  test_cli.py  test_config.py  test_epub.py  test_integration.py  test_markdown.py  test_packaging.py  test_plaintext.py  test_segments.py  test_select_adapter.py  test_tts.py  test_url.py
tests/fixtures/: sample.md
